# marlin

./: README.md  flake.nix
attestation/server/: Cargo.toml  README.md  default.nix
attestation/server-custom/: Cargo.toml  README.md  default.nix
attestation/server-custom-mock/src/: lib.rs
attestation/server-custom/src/: lib.rs  main.rs
attestation/server/src/: custom.rs  lib.rs  main.rs
attestation/verifier-risczero/methods/guest/src/: main.rs
enclaves/configs/: attestation-server.nix  base.nix  disk-ro.nix  green.nix  init-params-fetcher.nix  keygen-x25519.nix
enclaves/gauge/: Cargo.toml  default.nix  measurements.txt
enclaves/gauge/src/: main.rs
enclaves/testing/: custom-attestations.nix  green.nix
initialization/keygen/: Cargo.toml  README.md  default.nix
initialization/keygen/src/: secp256k1.rs
kms/creator/: Cargo.toml  README.md  default.nix
kms/creator-enclave/: default.nix
kms/creator-verifier/: Cargo.toml  README.md
kms/creator-verifier/src/: main.rs
kms/creator/src/: main.rs
kms/derive-server/: Cargo.toml  default.nix
kms/derive-server/src/: fetch.rs  main.rs  scallop.rs
kms/derive-utils/: Cargo.toml
kms/derive-utils/src/: lib.rs
kms/root-server/: Cargo.toml  default.nix
kms/root-server-enclave/: default.nix
kms/root-server/src/: derive.rs  derive_public.rs  main.rs  scallop.rs  taco.rs
operator/control-plane/: Cargo.toml
operator/control-plane/src/: aws.rs
operator/setup-aws/: Pulumi.yaml  add_rl.sh  common_rl.sh  index.ts  limiter-scripts.nix  limiter.nix  package.json  pnpm-lock.yaml  rates.json  remove_rl.sh
operator/setup-aws/src/: compute_rates.rs
sdks/rs/: Cargo.toml
sdks/rs/examples/: axum.rs  hyper.rs  scallop.rs  verifier.rs
sdks/rs/src/: attestation.rs  axum.rs  lib.rs  scallop.rs
