[package]
name = "attestation-server"
version = "2.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
axum = "0.7.4"
clap = { version = "4.0.18", features = ["derive"] }
hex = "0.4.3"
nitro-tpm-attest = "1.0.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
