[package]
name = "keygen"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
libsodium-sys-stable = "1.23.1"
secp256k1 = {version = "0.31.1", features = ["rand", "global-context"]}

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[[bin]]
name = "keygen-ed25519"
path = "src/ed25519.rs"

[[bin]]
name = "keygen-secp256k1"
path = "src/secp256k1.rs"

[[bin]]
name = "keygen-x25519"
path = "src/x25519.rs"
