[package]
name = "kms-creator"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
alloy = { version = "1.4.0", features = ["signer-local"], default-features = false }
anyhow = "1.0.100"
axum = "0.8.8"
bincode = { version = "2.0.1", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
kms-derive-utils = { version = "0.1.0", path = "../derive-utils" }
nucypher-core = "0.15.0"
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["full"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
