[package]
name = "kms-root-server"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
alloy = { version = "1.4.0", features = ["full"] }
anyhow = "1.0.100"
axum = "0.8.8"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
hex = "0.4.3"
kms-derive-utils = { version = "0.1.0", path = "../derive-utils" }
nucypher-core = "0.15.0"
marlin-sdk = { version = "0.1.3", default-features = false, features = ["axum", "attestation"] }
rand = "0.9.2"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["limit", "timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
