[package]
name = "marlin-sdk"
version = "0.1.0"
edition = "2024"
description = "Marlin SDK"
license = "Apache-2.0"

[dependencies]
# Common
thiserror = { version = "2.0.12" }

# Feature: attestation
aws-nitro-enclaves-cose = { version = "0.5.2", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
serde_cbor = { version = "0.11.2", optional = true }
hex-literal = { version = "1.0.0", optional = true }

# Feature: scallop
snow = { version = "0.9.6", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

# Feature: axum
axum = { version = "0.8.3", optional = true }

[dev-dependencies]
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
libsodium-sys-stable = { version = "1.22.2" }

[features]
default = ["attestation", "scallop", "axum"]
attestation = [
    "dep:aws-nitro-enclaves-cose",
    "dep:openssl",
    "dep:serde_cbor",
    "dep:hex-literal",
]
scallop = [
    "dep:snow",
    "dep:tokio",
]
axum = [
    "scallop",
    "dep:axum",
]

[lib]
name = "marlin"

[[example]]
name = "scallop"
path = "examples/scallop.rs"
required-features = ["scallop"]

[[example]]
name = "hyper"
path = "examples/hyper.rs"
required-features = ["scallop"]

[[example]]
name = "axum"
path = "examples/axum.rs"
required-features = ["axum"]

[profile.release]
strip = true
lto = true
panic = "abort"
